Updated webpage details

--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I just graduated from college last year. I'm excited to learn more skills.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born in Yokosuka-shi, Kanagawa-ken, Japan. My parents are from Manila, Philippines.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Going to thrift shops and watching anime.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Programming solutions to environmental problems.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Hagerstown, MD</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>It's a good way to get my foot in the door of an industry that's only getting bigger.</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="https://github.com/ACDecastro/">Github</a></li>
         </ul>
     </footer>
 </body>
